app/javascript/flavours/polyam/styles/mastodon/components.scss
/* ... */
.column-link__badge {
  display: inline-block;
  border-radius: 4px;
  font-size: 12px;
  line-height: 19px;
  font-weight: 500;
  background: var(--color-bg-primary);
  padding: 4px 8px;
  margin: -6px 10px;
}

.column-subheading {
  background: var(--color-bg-secondary);
  color: var(--color-text-secondary);
  padding: 8px 20px;
  font-size: 12px;
  font-weight: 500;
  text-transform: uppercase;
  cursor: default;
}

.getting-started__wrapper {
  flex: 0 0 auto;
}

.flex-spacer {
  flex: 1 1 auto;
}

.getting-started {
  color: var(--color-text-tertiary);
  overflow: auto;
  border: 1px solid var(--color-border-primary);
  border-top: 0;

  &__trends {
    flex: 0 1 auto;
    opacity: 1;
    animation: fade 150ms linear;
    margin-top: 10px;

    h4 {
      border-bottom: 1px solid var(--color-border-primary);
      padding: 10px;
      font-size: 12px;
      text-transform: uppercase;
      font-weight: 500;

      a {
        color: var(--color-text-secondary);
        text-decoration: none;
      }
    }

    .trends__item {
      border-bottom: 0;
      padding: 10px;

      &__current {
        color: var(--color-text-secondary);
      }
    }
  }
}

.keyboard-shortcuts {
  padding: 8px 0 0;
  overflow: hidden;

  thead {
    position: absolute;
    inset-inline-start: -9999px;
  }

  td {
    padding: 0 10px 8px;
  }

  kbd {
    display: inline-block;
  }
}

input.glitch-setting-text {
  box-sizing: border-box;
  color: var(--color-text-secondary);
  background: transparent;
  border: 0;
  border-bottom: 2px solid var(--color-text-secondary);
  outline: 0;
  font-family: inherit;
  margin-bottom: 10px;
  padding: 7px 0;
  width: 100%;

  &:focus,
  &:active {
    color: var(--color-text-on-brand-base);
    border-bottom-color: var(--color-bg-brand-base);
  }

  @media screen and (width <= 600px) {
    font-size: 16px;
  }
}

.status-card {
  display: flex;
  align-items: center;
  position: relative;
  font-size: 14px;
  color: var(--color-text-secondary);
  margin-top: 14px;
  text-decoration: none;
  overflow: hidden;
  border: 1px solid var(--color-border-primary);
  border-radius: 8px;
  contain: inline-size layout paint style;

  &.bottomless {
    border-radius: 8px 8px 0 0;
  }

  &__actions {
    bottom: 0;
    inset-inline-start: 0;
    position: absolute;
    inset-inline-end: 0;
    top: 0;
    display: flex;
    justify-content: center;
    align-items: center;
    cursor: pointer;

    & > div {
      background: rgb(from var(--color-shadow-primary) r g b / 60%);
      border-radius: 8px;
      padding: 12px 9px;
      backdrop-filter: $backdrop-blur-filter;
      flex: 0 0 auto;
      display: flex;
      justify-content: center;
      align-items: center;
    }

    button,
    a {
      display: inline;
      color: var(--color-text-primary);
      background: transparent;
      border: 0;
      padding: 0 8px;
      text-decoration: none;
      font-size: 18px;
      line-height: 18px;

      &:hover,
      &:active,
      &:focus {
        color: var(--color-text-primary);
      }
    }

    a {
      font-size: 19px;
      position: relative;
      bottom: -1px;
    }
  }
}

a.status-card {
  cursor: pointer;

  &:hover,
  &:focus,
  &:active {
    // Polyam: Fix underline being white
    text-decoration-color: var(--color-text-brand);

    .status-card__title,
    .status-card__host,
    .status-card__author,
    .status-card__description {
      color: var(--color-text-brand);
    }
  }
}

.status-card a {
  color: inherit;
  text-decoration: none;

  &:hover,
  &:focus,
  &:active {
    .status-card__title,
    .status-card__host,
    .status-card__author,
    .status-card__description {
      color: var(--color-text-brand);
    }
  }
}

.status-card-photo {
  cursor: zoom-in;
  display: block;
  text-decoration: none;
  width: 100%;
  height: auto;
  margin: 0;
}

.status-card-video {
  // Firefox has a bug where frameborder=0 iframes add some extra blank space
  // see https://bugzilla.mozilla.org/show_bug.cgi?id=155174
  overflow: hidden;

  iframe {
    width: 100%;
    height: 100%;
  }
}

.status-card__title {
  display: block;
  font-weight: 700;
  font-size: 19px;
  line-height: 24px;
  color: var(--color-text-primary);
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.status-card.expanded .status-card__title {
  white-space: normal;
  display: -webkit-box;
  line-clamp: 2;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
}

.status-card__content {
  flex: 1 1 auto;
  overflow: hidden;
  padding: 8px 10px; // glitch: reduced padding
  box-sizing: border-box;
  max-width: 100%;
}

.status-card__host {
  display: block;
  font-size: 14px;
  margin-bottom: 8px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.status-card__author {
  display: block;
  margin-top: 8px;
  font-size: 14px;
  color: var(--color-text-primary);
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;

  strong {
    font-weight: 500;
  }
}

.status-card__description {
  display: block;
  margin-top: 8px;
  font-size: 14px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.status-card__image {
  flex: 0 0 auto;
  width: 96px; // glitch: intentional change to better use space
  aspect-ratio: 1;
  background: var(--color-bg-secondary);
  position: relative;

  & > .icon {
    width: 15px; // Polyam: Reduced icon size
    height: 15px; // Polyam: Reduced icon size
    position: absolute;
    transform-origin: 50% 50%;
    top: 50%;
    inset-inline-start: 50%;
    transform: translate(-50%, -50%);
  }
}

.status-card__image-image {
  display: block;
  margin: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
  background-size: cover;
  background-position: center center;
}
/* ... */

